# ld_preload_hacks

./: .gitignore  CMakeLists.txt  Makefile  README.md  do_not_use_rand.c  do_not_use_rand.cpp  libmain.cpp  libmain.h  uses_rand.cpp
examples/: do_not_use_rand.cpp  see_hidden_file.cpp  uses_rand.cpp
